--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
-section{
-    
-}
+
 /*START HEADER SECTION*/
 #header{
     background: url("images/header-bg.png") no-repeat;
     background-position: center left;
     background-size: contain;
+    background-attachment: fixed;
 }
 .container_full{
     width: 100%;
@@ -90,7 +89,9 @@ section{
 /* START LATEST WORK SECTION */
 .latest_work_bg{
     background: url("images/latest-work-bg.png") no-repeat;
-    background-position: center right;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 .special{
     text-align: center;
